 - Status.isSuccess(), is*Error(), isRedirection() and isInfo() methods now support status classes
   as specified in HTTP 1.1. Reported by Paul J. Lucas.
 - The request ClientInfo address and port were not available for the default connector and the 
   Grizzly connector. Patch contributed by Kevin Conaway.
 
[Enhancements] 
 - Added support for Alpha-numerical sorting of index pages in Directory. Suggested by Davide 
   Angelocola based on David Koelle's original idea. Optimized implementation contributed by Rob 
   Heittman from Solertium Corporation. New setComparator, setAlphaComparator and 
   setAlphaNumComparator methods added. The default sorting is now "AlphaNum".  
 - Added new JsonRepresentation constructors taking a Bean or a Map. Suggested by Evgeny K. 
   Shepelyuk and Sean Landis
 - Updated Spring to version 2.5
 - Updated db4o to version 7.0
 - Added a new parameter to ServerServlet allowing specification of a custom component to instantiate.
 - Synchronized some list setters on Component and Connector with explanation in Javadocs as suggested
   by Tim Peirls.
 - Guard.checkSecret() method now has a Request parameter. Suggested by Alex Milowski.
 - Added new constructors to CookieSetting. Contributed by Stephan Koops.
 - Filter.beforeHandle() and doHandle() methods can now indicates if the processing should continue normal,
   go to the afterHandle() method directly or stop immediately. IMPORTANT NOTE: as it isn't possible to
   add a return parameter to an existing method, the change can break existing filters. In this case, you
   just need to return the "CONTINUE" constant from your method and use "int" as return parameter.
   Issue reported by Paul J. Lucas.
 - Added Handler.getQuery() method to easily return the request's target resource reference query as a
   parsed form (series of parameters). Suggested by Kevin Conaway.
 - Added a Reference.clone() method. Contributed by Stephan Koops.