@@ -14,6 +14,8 @@ Changes log
    as specified in HTTP 1.1. Reported by Paul J. Lucas.
  - The request ClientInfo address and port were not available for the default connector and the 
    Grizzly connector. Patch contributed by Kevin Conaway.
+ - Fixed issue in SpringHost preventing usage of the setRoutes(Map) method. Replaced with a 
+   setAttachments(Map) method. Added Javadocs example. Reported by Simon Olofsson.
  
 [Enhancements] 
  - Added support for Alpha-numerical sorting of index pages in Directory. Suggested by Davide 
